# SettingsManager-Application

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp  mysettings.txt
Debug/: KVPStorage  makefile
Debug/src/: CommandFactory.d  CommandIface.d  DataBaseManagerIface.d  DeleteCommand.d  FileDataBaseManager.d  GetCommand.d  SetCommand.d  SettingsManager.d  SettingsManagerIface.d  main.d  subdir.mk
headerFiles/: CommandFactory.h  CommandIface.h  DataBaseManagerIface.h  Definitions.h  DeleteCommand.h  FileDataBaseManager.h  GetCommand.h  SetCommand.h  SettingsManager.h  SettingsManagerIface.h
src/: CMakeLists.txt  CommandFactory.cpp  CommandIface.cpp  DataBaseManagerIface.cpp  DeleteCommand.cpp  FileDataBaseManager.cpp  GetCommand.cpp  SetCommand.cpp  SettingsManager.cpp  main.cpp
